--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,14 +6,14 @@ spring:
         registration:
           google:
             client-id: internal
-            client-secret:
+            client-secret: internal
             scope:
               - email
               - profile
 
           keycloak:
             client-id: internal
-            client-secret:
+            client-secret: internal
             provider: oidc
             scope:
               - openid
